--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
     depends_on:
     - selenium
     volumes:
-    - ./files/example-chrome-selenium.py:/example-chrome-selenium.py
-    - ./files/example-chrome-snmpd.conf:/etc/snmp/snmpd.conf
-    image: kedu/selenium-snmpd:0.1
+    - ./examples/example-chrome-selenium.py:/example-chrome-selenium.py
+    - ./examples/example-chrome-snmpd.conf:/etc/snmp/snmpd.conf
+    image: kedu/selenium-python-snmpd
 
   test:
     container_name: test
     depends_on:
     - selenium
     - snmpd
-    image: kedu/selenium-snmpd:0.1
+    image: kedu/selenium-python-snmpd
